--- a/css/style.css
+++ b/css/style.css
@@ -1149,6 +1149,12 @@ textarea { height: 14vh; }
 .fa-question-circle {
 	color: rgb(1,110,169); 
 }
+
+.card .btn-link:hover,
+.card .btn-link:link, 
+.card .btn-link:active,
+.card .btn-link:visited
+	{ color: #000 !important; }
 	
 
 /*change in responsive*/
