--- a/css/style.css
+++ b/css/style.css
@@ -99,8 +99,6 @@ navbar {
 	top: 24%;
 }
 
-
-
 /*orange*/
 
 .orange {
@@ -225,6 +223,39 @@ navbar {
 }
 
 /*circle*/
+
+.abouticon {
+	display: relative; 
+}
+
+.circle::before {
+		display: none; 
+		position: absolute;
+		content: 'ABOUT';
+		
+		
+		color: #fff;
+		font-size: .95rem;
+		line-height: 80px;
+		font-weight: 400;
+		z-index: 30;
+		top: 10%;
+		left: 10%;
+	}
+
+.circle::after {
+		display: none; 
+		position: absolute;
+		content: '';
+		top: 10%;
+		left: 10%;
+		padding: 2.8%;
+		background-color: rgb(236, 185, 77);
+		border-radius: 50%;
+		z-index: 0;
+}
+
+
 
 /**--注１. 
 	.circle {
@@ -1201,24 +1232,34 @@ textarea { height: 14vh; }
 
 .copy a:hover, .designers a:hover { color: darkblue; text-decoration: underline;}
 
+/*button to #page-top*/
+#page-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  font-size: 14px;
+  line-height: 1;
+  z-index: 99;
+  transition: all 1s ease-in-out; 
+  opacity: 0;
+  visibility: hidden; 
+}
 
+#page-top a {
+  background: #ECECEC;
+  text-decoration: none;
+  color: #000;
+  width: 60px;
+  padding: 33% 5%;
+  text-align: center;
+  font-size: 20px; 
+}
+
+#page-top.scroll { opacity: 100; visibility: visible; }
 
 /**55h **/
 
-/**注１.@media(min-height: 720px) and (max-height: 824px) の、
-circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displayのcircleが編集不可能**/
 /**注３. iOSでボタンの色実際にひらいたらヤバい、形もちがう（Devでは良いのに）**/
-/**注７. opinion写真3つを同じ大きさにどうしてもできない**/
-/**注８. present. flex_box. mediaquery for iphone5...
-53vh以下にしたいけど、したらiphone5ではみでる。Or　justify-content aroundにしたいけどできない。**/
-/**注９. headerのbuttonにhrefでformに行くようにしたが、右下にしか、きかない、、、なぜ？**/
-/**注１０. questionsのcard-headerにborder-bottomがつかない**/
-
-
-/**注５. OGPが上手く機能していない →　画像絶対パスで指定しないと表示されない**/
-/**注6. .opinion .flex_itemがなぜ、余白なしにセンター並びできたか、理解していない。写した**/
-/**注４. learn_box のimgが（Devでは良いのに）、携帯でみたらヤバい→remではなく、pxを使い、img-fluid解除**/
-/**注８. acoordion のbuttonが反応してオレンジ・赤色に→buttonをdivに変える**/
 
 /*etc----------------------*/
 @media (max-width: 1050px) {
@@ -1757,34 +1798,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		position: relative; 
 	}
 	
-	/**
 	
-	.circle::before {
-		display: inline-block; 
-		position: absolute;
-		content: 'ABOUT';
-		color: #fff;
-		font-size: .8rem;
-		line-height: 80px;
-		font-weight: 400;
-		z-index: 30;
-		top: -39px;
-		left: 44%;
-	}
-
-	.circle::after {
-		position: absolute;
-		content: '';
-		display: inline-block; 
-		top: -25px;
-		left: 43%;
-		padding: 8%;
-		background-color: rgb(236, 185, 77);
-		border-radius: 50%;
-		z-index: 0;
-	}
-	
-	**/
 	
 	/*about*/
 	
@@ -2364,35 +2378,6 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	
 	/*circle*/
 	
-	.circle::before {
-		display: none; 
-		position: absolute;
-		content: 'ABOUT';
-		color: #fff;
-		line-height: 80px;
-		font-weight: 400;
-		z-index: 30;
-		font-size: .9rem;
-		top: -39px;
-		left: 44%;
-	}
-
-	.circle::after {
-		display: none; 
-		position: absolute;
-		content: '';
-		top: -30px;
-		left: 43%;
-		padding: 7%;
-		background-color: rgb(236, 185, 77);
-		border-radius: 50%;
-		z-index: 0;
-	}
-	
-	.circle {
-		position: relative; 
-	}
-	
 	/*learn*/
 	
 }
@@ -2459,39 +2444,6 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 	
 	.brsp { display: none; }
 	
-	/*circle*/
-	
-	/**
-	.circle::before {
-		display: none; 
-		position: absolute;
-		content: 'ABOUT';
-		color: #fff;
-		line-height: 80px;
-		font-weight: 400;
-		z-index: 30;
-		font-size: .9rem;
-		top: -39px;
-		left: 47%;
-	}
-
-	.circle::after {
-		position: none　!important;
-		content: '';
-		display: inline-block; 
-		top: -35px;
-		left: 46%;
-		padding: 4.3%;
-		background-color: rgb(236, 185, 77);
-		border-radius: 50%;
-		z-index: 0;
-	}
-	
-	.circle {
-		position: relative; 
-	}
-	
-	**/
 	
 	/*about*/
 	
@@ -2822,22 +2774,7 @@ circle::afterとbeforeが、謎にdisplayのcssに適応するせいで、displa
 		min-height: 90vh; 
 	}
 	
-	/*circle*/
-	
-	.circle::before {
-		display: inline-block; 
-		font-size: .9rem;
-		top: -39px;
-		left: 44%;
-	}
 
-	.circle::after {
-		display: inline-block; 
-		top: -30px;
-		left: 43%;
-		padding: 5.8%;
-	}
-	
 	/*about*/
 	
 	.about .wrapper {
